<resources>
    <string name="app_name">Blood Flow</string>
    <string name="connected">Connected!</string>
    <string name="not_connected">Not Connected</string>
    <string name="connect">Connect</string>
    <string name="bt_list_title">Select Device</string>
    <string name="bt_list_description">If you didn\'t find your Bluetooth adapter in the above list \n Please connect with it via your mobile Bluetooth and come back here to select it.</string>
    <string name="add_doctor_label">Add Doctor</string>
    <string name="doctor_id">Doctor ID</string>
    <string name="doctor_id_description">Ask your doctor for the ID that was given from\n@BloodFlowTest_bot Telegram bot.</string>
    <string name="your_name">Your Name</string>
    <string name="your_name_description">To let your doctor recognize you.</string>
    <string name="save">Save</string>
    <string name="saved">SAVED</string>
    <string name="blood_test">Test my blood flow</string>
    <string name="you_not_connected">You are not connected</string>
    <string name="heart_bpm">Heart BPM</string>
    <string name="send_dr">Send to your doctor</string>
    <string name="no_doctor">You didn\'t add a doctor</string>
    <string name="save_no_send">Saved but didn\'t sent</string>
    <string name="saved_and_sent">Saved and sent</string>
    <string name="wait_average">Wait until you get the average</string>
    <string name="cancel">Cancel</string>
    <string name="sorry_send">Sorry the message didn\'t send</string>
    <string name="sent">Sent</string>
    <string name="bpm">BPM</string>
    <string name="spo2">Spo2</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="send_list">Send list</string>
    <string name="send_extract_tests">Send/Extract Tests</string>
    <string name="last_day">Last day</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="last_year">Last year</string>
    <string name="send">Send</string>
    <string name="extract">Extract</string>
    <string name="storage_permission">The app need storage permission to create the Excel report file</string>
    <string name="no_last_day">No tests on the last day</string>
    <string name="no_last_week">No tests on the last week</string>
    <string name="no_last_month">No tests on the last month</string>
    <string name="no_last_year">No tests on the last year</string>
    <string name="saved_download">Saved in download folder inside\n\"Blood Flow App\"</string>
    <string name="no_send">Sorry the file didn\'t sent</string>
</resources>