<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addDoctorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/add_doctor_label"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputDoctorID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="8"
        android:gravity="center"
        android:hint="@string/doctor_id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#757575"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/doctorIdDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/doctor_id_description"
        android:textColor="@color/black"
        android:textSize="11sp" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/your_name"
        android:importantForAutofill="no"
        android:inputType="textFilter"
        android:textColorHint="#757575"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/yourNameDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/your_name_description"
        android:textColor="@color/black"
        android:textSize="11sp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/save" />
</LinearLayout>