<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/showUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/showBpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showUserName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/showSpo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showUserName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/showTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showBpm"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/showDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showSpo2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/showBeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showUserName"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/heart_bpm"
        app:srcCompat="@drawable/ic_heart_beat" />

    <Button
        android:id="@+id/btnSendShowDr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/showBeat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/send_dr" />

    <Button
        android:id="@+id/btnCancelShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSendShowDr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cancel" />

</RelativeLayout>